--- a/roles/hdp-ambari-agent-core/tasks/main.yml
+++ b/roles/hdp-ambari-agent-core/tasks/main.yml
@@ -11,7 +11,7 @@
   lineinfile: 
     dest: /etc/ambari-agent/conf/ambari-agent.ini
     regexp: ^.*hostname=.*$
-    line: hostname="{{ambari_server_hostname}}"
+    line: hostname={{ambari_server_hostname}}
     backup: yes
 
 - name: Ensure ambari-agent is running and enabled
