--- a/roles/hdp-ambari-prep/tasks/RedHat.yml
+++ b/roles/hdp-ambari-prep/tasks/RedHat.yml
@@ -1,7 +1,2 @@
 - name: Install Ambari repo.
-  get_url: url="{{ ambari_repos.RHEL.url }}" dest=/etc/yum.repos.d/ambari.repo
-
-- name: Import Ambari Repo GPG key.
-  rpm_key:
-    key: "{{ ambari_repos.RHEL.gpg_key_url }}"
-    state: present
+  template: src=ambari.repo.RHEL.j2 dest=/etc/yum.repos.d/ambari.repo
