--- a/roles/hdp-ambari-server-core/tasks/RedHat.yml
+++ b/roles/hdp-ambari-server-core/tasks/RedHat.yml
@@ -8,7 +8,7 @@
     - mysql-connector-java
     - mysql
     - MySQL-python
-    - python-httplib2
+#    - python-httplib2
     - curl
   when: ambari_db_flavour == "mysql"
 
