--- a/roles/hdp-basic-packages/tasks/RedHat.yml
+++ b/roles/hdp-basic-packages/tasks/RedHat.yml
@@ -1,3 +1,3 @@
 - name: Install basic packages 
   yum: name={{item}} state=present
-  with_items: hdp_redhat_packages
+  with_items: "{{hdp_redhat_packages}}"
