Update framework to HDP 2.6, add molecule testing framework, make it runnable.
* HDP updated to version 2.6
* Added molecule testing framework, but haven't yet written any tests.
  To provision HDP on docker, run 'molecule converge'.
  Don't know why 'molecule test' don't work yet, will check later.
  Running the scripts under molecule on docker with debian, already required quite a lot of fixes.

--- a/roles/hdp-ambari-server-core/tasks/main.yml
+++ b/roles/hdp-ambari-server-core/tasks/main.yml
@@ -22,17 +22,21 @@
 # - name : check if ambari-server is installed
 #  wait_for : path=/tmp/ambari-install-output search_regex="completed successfully"
 
-- name: Check for ambari-server status (workaround for invalid service ambari status code)
-  command: ambari-server status
-  register: ambaristatus
-
-- set_fact:
-    ambari_server_not_running: "{{ ambaristatus.stdout | search('.*Ambari Server not running.*') }}"
+#- name: Check for ambari-server status (workaround for invalid service ambari status code)
+#  command: ambari-server status
+#  changed_when: False
+#  register: ambaristatus
+#
+#- name: Set ambari_server_not_running variable
+#  set_fact:
+#    ambari_server_not_running: "{{ ambaristatus.stdout | search('.*Ambari Server not running.*') }}"
 
 - name : start ambari server and enabled at reboot
-  service : name=ambari-server state=restarted enabled=yes
+  service : 
+    name: ambari-server 
+    state: "{{  ambari_server_force_restart or ambari_server_force_configuration | ternary('restarted', 'started') }}"
+    enabled: yes
   register: ambari_up
-  when: ambari_server_force_restart or ambari_server_force_configuration or ambari_server_not_running 
 
 - name : check if ambari-server is up
   wait_for : port={{ ambari_server_port }} delay=10
