--- a/roles/hdp-ambari-server-core/tasks/mysql.yml
+++ b/roles/hdp-ambari-server-core/tasks/mysql.yml
@@ -1,14 +1,14 @@
 - name: Ensure ambari database exist
-  mysql_db: > 
-    name={{ ambari_db_name }} 
-    state=present 
+  mysql_db: >
+    name={{ ambari_db_name }}
+    state=present
     login_host={{ ambari_db_host }}
     login_user={{ ambari_db_user }}
     login_password={{ ambari_db_password }}
 
 - name: import ambari-server schema
-  mysql_db: > 
-    name={{ ambari_db_name }} 
+  mysql_db: >
+    name={{ ambari_db_name }}
     state=import
     login_host={{ ambari_db_host }}
     login_user={{ ambari_db_user }}
@@ -16,8 +16,9 @@
     target=/var/lib/ambari-server/resources/Ambari-DDL-MySQL-CREATE.sql
 
 - name: configure ambari to use mysql
-  shell: /usr/sbin/ambari-server setup --jdbc-db=mysql --jdbc-driver=/usr/share/java/mysql-connector-java.jar
+  command: /usr/sbin/ambari-server setup --jdbc-db=mysql --jdbc-driver=/usr/share/java/mysql-connector-java.jar
+  when: True # TODO: put some good idempotence test here.
 
 - name: configure ambari server with mysql
-  shell: /usr/sbin/ambari-server setup -s --database=mysql --databasehost={{ ambari_db_host }} --databaseport={{ ambari_db_port }} --databasename={{ ambari_db_name }}  --databaseusername={{ ambari_db_user }}  --databasepassword={{ ambari_db_password }}  -j {{ ambari_java_home }}
-
+  command: /usr/sbin/ambari-server setup -s --database=mysql --databasehost={{ ambari_db_host }} --databaseport={{ ambari_db_port }} --databasename={{ ambari_db_name }}  --databaseusername={{ ambari_db_user }}  --databasepassword={{ ambari_db_password }}  -j {{ ambari_java_home }}
+  when: True # TODO: put some good idempotence test here.
