--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
 ---
 
-# This play installs a database used by Ambari and other components. 
-# It can be skipped if you have a mysql DB already installed, but then please configure it with variables. 
+# This play installs a database used by Ambari and other components.
+# It can be skipped if you have a mysql DB already installed, but then please configure it with variables.
 # Please look at hdp-ambari-server-core  to know what variables to set up.
 - name: Install DB for HDP
   hosts: hdp-db-server
@@ -14,7 +14,7 @@
 #- name: Prepare hdp nodes
 #  hosts: hdp
 #  roles:
-#    - hdp-basic-packages  
+#    - hdp-basic-packages
 #    - ansiblebit.oracle-java
 #    - hdp-ambari-prep
 #    - hdp-ambari-server-core  # this is the main role installing ambari server.
@@ -26,6 +26,6 @@
     - hdp-ambari-server
 
 - name: Install Ambari Agents
-  hosts: hdp
+  hosts: hdp-ambari-server:hdp-ambari-agent
   roles:
     - hdp-ambari-agent
