--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -21,3 +21,10 @@ ambari_db_password: "ambari"
 ambari_db_host: "{{ hostvars[groups['hdp-db-server'][0]].ansible_default_ipv4.address }}"
 ambari_db_name: "ambari"
 ambari_db_flavour: "mysql"
+
+
+# Fix the issue, that we cannot download rpm from Oracle.
+oracle_java_version: 8
+oracle_java_version_update: 121
+oracle_java_rpm_filename: "jdk-{{ oracle_java_version }}u{{ oracle_java_version_update }}-linux-x64.rpm"
+oracle_java_rpm_url: "http://download.oracle.com/otn/java/jdk/8u121-b13/e9e7ea248e2c4826b92b3f075a80e441/jdk-8u121-linux-i586.rpm"
